# TestBobrAI

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
bot/handlers/: commands_.py  message_.py
bot/middlewares/: album_midddlleware.py  databasemiddleware.py  message_history_middleware.py
bot/states/: auth_state.py  gpt_states.py  tariff_states.py
settings/: config.py  settings.ini.example
tools/: database.py  history.py  msg_tools.py  weather.py
