[tool.poetry]
name = "testbobrai"
version = "0.1.0"
description = ""
authors = ["Until <kostyuchenko.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.13.1"
aiohttp = "^3.10.10"
sqlalchemy = "^2.0.35"
colored = "^2.2.4"
termcolor = "^2.5.0"
redis = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
